--- a/requirements.txt
+++ b/requirements.txt
@@ -8,21 +8,26 @@ django-cors-headers==4.6.0
 django-pytest==0.2.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
 grpcio-status==1.67.0
 gunicorn==23.0.0
 idna==3.10
 iniconfig==2.0.0
 packaging==24.2
 pluggy==1.5.0
+protobuf==5.29.4
+psycopg2-binary==2.9.10
 PyJWT==2.9.0
 pytest==8.3.3
 pytest-django==4.9.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 requests==2.32.3
+six==1.17.0
 sqlparse==0.5.1
 text-unidecode==1.3
 types-python-dateutil==2.9.0.20240316
 tzdata==2024.2
 urllib3==2.2.3
 wheel==0.45.0
-psycopg2-binary>=2.8
